<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/lectureFragment"
            android:icon="@drawable/ic_lecture"
            android:title="나의 강좌" />
        <item
            android:id="@+id/noticeFragment"
            android:icon="@drawable/ic_notice"
            android:title="공지사항" />
        <item
            android:id="@+id/msgFragment"
            android:icon="@drawable/ic_msg"
            android:title="쪽지" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>