<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/lectureFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="ac.dongyang.smartapp.a06_navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ac.dongyang.smartapp.a06_navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ac.dongyang.smartapp.a06_navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!--아이디가 네비게이션 메뉴에서 보이기 때문에 중요-->
    <fragment
        android:id="@+id/lectureFragment"
        android:name="ac.dongyang.smartapp.a06_navigationdrawer.LectureFragment"
        android:label="나의 강좌"
        tools:layout="@layout/fragment_lecture" >
        <action
            android:id="@+id/action_lectureFragment_to_noticeFragment"
            app:destination="@id/noticeFragment" />
    </fragment>
    <fragment
        android:id="@+id/noticeFragment"
        android:name="ac.dongyang.smartapp.a06_navigationdrawer.NoticeFragment"
        android:label="공지사항"
        tools:layout="@layout/fragment_notice" >

    <fragment
        android:id="@+id/msgFragment"
        android:name="ac.dongyang.smartapp.a06_navigationdrawer.MsgFragment"
        android:label="쪽지"
        tools:layout="@layout/fragment_msg" />
</navigation>